--- a/index.html
+++ b/index.html
@@ -4,30 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
     <title>Calculator Clone</title>
   </head>
   <body>
     <section id="container">
       <div id="output">
-        <div id="prev-operand" data-prev-operand>233+</div>
-        <div id="curr-operand" data-curr-operand>456</div>
+        <div id="prev-operand" data-prev-operand></div>
+        <div id="curr-operand" data-curr-operand></div>
       </div>
       <button data-all-clear class="span-two">AC</button>
       <button data-delete>DEL</button>
-      <button data-delete>+</button>
-      <button data-delete>1</button>
-      <button data-delete>2</button>
-      <button data-delete>3</button>
-      <button data-delete>*</button>
-      <button data-delete>4</button>
-      <button data-delete>5</button>
-      <button data-delete>6</button>
-      <button data-delete>7</button>
-      <button data-delete>8</button>
-      <button data-delete>9</button>
-      <button data-delete>.</button>
-      <button data-delete>0</button>
-      <button data-delete class="span-two">=</button>
+      <button data-operation>+</button>
+      <button data-number>1</button>
+      <button data-number>2</button>
+      <button data-number>3</button>
+      <button data-operation>*</button>
+      <button data-number>4</button>
+      <button data-number>5</button>
+      <button data-number>6</button>
+      <button data-operation>/</button>
+      <button data-number>7</button>
+      <button data-number>8</button>
+      <button data-number>9</button>
+      <button data-operation>-</button>
+      <button data-number>.</button>
+      <button data-number>0</button>
+      <button data-equals class="span-two">=</button>
     </section>
   </body>
 </html>
