--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <section id="container">
       <div id="output">
-        <div id="prev-operand" data-prev-operand></div>
-        <div id="curr-operand" data-curr-operand></div>
+        <div id="prev-operand" data-prev-operand>234+</div>
+        <div id="curr-operand" data-curr-operand>456</div>
       </div>
       <button data-all-clear class="span-two">AC</button>
       <button data-delete>DEL</button>
